Fix references and update figure

--- a/pota.tex
+++ b/pota.tex
@@ -47,7 +47,7 @@ Y. Ordenes-Brice\~no$^{8,10}$
 \\~\\
 $^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 80131 - Napoli, Italy\\
 $^2$ European Southern Observatory, Karl-Schwarzschild-Stra{\ss}e 2, 85748 Garching bei Munchen, Germany\\
-$^3$ INAF â€“ Astronomical Observatory of Abruzzo, Via Maggini, 64100, Teramo, Italy\\
+$^3$ INAF -- Astronomical Observatory of Abruzzo, Via Maggini, 64100, Teramo, Italy\\
 $^4$ Kapteyn Astronomical Institute, University of Groningen, PO Box 800, 9700 AV Groningen, The Netherlands\\
 $^5$ Dipartimento di Fisica Ettore Pancini, Universit\`a di Napoli Federico II,via Cintia, 80126 - Napoli Italy\\
 $^6$ Harvard-Smithsonian Center for Astrophysics, 60 Garden St., Cambridge (MA), 02138, US\\
@@ -56,7 +56,7 @@ $^8$ Astronomisches Rechen-Institut Zentrum f{\"u}r Astronomie M{\"o}nchhofstra{
 $^9$ Jeremiah Horrocks Institute, University of Central Lancashire, Preston, PR1 2HE, United Kingdom\\
 $^{10}$ Pontificia Universidad Catolica de Chile, Av. Vicuna Mackenna 4860, Santiago, Chile \\
 $^{11}$ CASSACA, Camino El Observatorio 1515, Las Condes, Santiago, Chile\\
-$^{12}$ Gemini Observatory, Northern Operations Center, 670 North Aâ€™ohoku Place, Hilo, HI 96720, USA\\
+$^{12}$ Gemini Observatory, Northern Operations Center, 670 North A'ohoku Place, Hilo, HI 96720, USA\\
 $^{13}$ INFN, Sezione di Napoli, via Cintia, 80126, Napoli, Italy\\
 $^{14}$ UK Astronomy Technology Centre, Royal Observatory Edinburgh, Blackford Hill, Edinburgh, EH9 3HJ, U
 }
@@ -93,21 +93,19 @@ corresponding to about $1/4$ of the cluster virial radius, which will be mapped
 with unprecedented details.
 With this comprehensive radial velocity sample we have found that the velocity 
 dipersion of the GC population (equally for red and blue GC populations) shows 
-a relatively sharp increase from low velocity dispersion ($\sim\250-350$ km/s) 
-to high velocity dispersion ($\sim\!300-400$ km/s) at around $r_{\rm proj}\approx10\arcmin$ 
-($\sim\!60$\,kpc) cluster-centric distance. 
+a relatively sharp increase from low velocity dispersion ($\sim 250-350 \kms$) 
+to high velocity dispersion ($\sim 300-400 \kms$) at projected radius of $\approx10$ arcmin 
+($\sim 60$ kpc) from the galaxy centre. 
 While the inner values are consistent with the radial velocity dispersion profile 
 of NGC 1399 (the central cluster galaxy) and the outer GC velocity dispersion values 
 are consistent with the velocity dispersion of the Fornax cluster galaxy population. 
 This demonstrates that at $r_{\rm proj}\approx60$\,kpc both blue and red GC populations 
 begin to be governed by the dominating Fornax cluster potential, rather than the central 
-NGC\,1399 galaxy potential. This kinematic evidence corroborates the result found in 
+NGC~1399 galaxy potential. This kinematic evidence corroborates the result found in 
 the break of the galaxy surface brightness profile which transitions at a similar radius 
 from a steeper profile of the bright central galaxy and the shallower profile of the outer 
 exponential halo. These lines of evidence show, from the dynamical point of view, 
 the emergence of an intracluster population of GCs in the Fornax galaxy cluster.
-
-
 \end{abstract}
 
 \begin{keywords}
@@ -127,7 +125,7 @@ The Fornax cluster is the most massive galaxy overdensity after the Virgo cluste
 within 20 Mpc and it is an ideal target to study the effect of the environment 
 on the structure and assembly of galaxies of any type, from the massive central 
 giant early-type systems to the dwarf galaxies (e.g. \citealt{Ferguson89},  
-\citealt{munoz+15}, \citealt{Iodice+16}, \citealt{venhola+17}, 
+\citealt{munoz15}, \citealt{Iodice16}, \citealt{venhola17}, 
 \citealt{Eigenthaler18}). Despite its regular appearance, 
 it has been found that the assembly of Fornax is still ongoing. 
 Although its core seems in an evolved phase \citep{Grillmair94,Jordan07} 
@@ -145,7 +143,7 @@ using discrete kinematical tracers (e.g. GCs, UCDs and PNe) and finally connect 
 large scale kinematics down to the scale of the dwarf galaxies, we have started 
 a multi-instrument observational effort called the Fornax Cluster VLT 
 Spectroscopic Survey (FVSS). As a part of this effort we have acquired integral 
-field spectroscopy of dwarfs galaxies (see \citealt{mentz+16}, Spiniello et al. 
+field spectroscopy of dwarfs galaxies (see \citealt{mentz16}, Spiniello et al. 
 in preparation), a counter dispersed imaging run with FORS2 to detect and 
 measure radial velocities of planetary nebulae (Spiniello et al. 2018, 
 submitted as FVSS II) and multi-object spectroscopy of GC and UCD candidates 
@@ -164,16 +162,14 @@ the regions where they meet the intracluster field (see e.g., \citealt{napolitan
 galaxy regions and we expect to find the kinematical signature of the 
 substructures already seen in the FDS photometry \citep{Iodice16} or other 
 gravitational interactions such as shells and tidal tails in the kinematics of 
-the galaxy outskirts or intracluster regions (\citealt{napolitano02,napolitano03}; 
-\citealt{murante07}; \citealt{bullock05}; \citealt{rudick06}; 
-\citealt{duc11}; \citealt{Longobardi15}). FVSS will be 
-the foundation of a multifaceted project to constrain the baryonic and dark 
+the galaxy outskirts or intracluster regions 
+\citep{napolitano02,napolitano03, murante07, bullock05, rudick06, duc11, Longobardi15}. 
+FVSS will be the foundation of a multifaceted project to constrain the baryonic and dark 
 mass distribution in the core of the Fornax cluster with high precision, thus 
 shedding light on the assembly history of massive galaxies in one of the 
 nearest dense environments.
 
-In this first paper of the series, we present the radial velocity catalogue of 
-GCs. 
+In this first paper of the series, we present the radial velocity catalogue of GCs. 
 %There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 
 %2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an 
 %extension of the stellar kinematics out to several effective radii and 
@@ -211,7 +207,7 @@ for illustrative purposes. Note how
 the VIMOS masks are dithered to maximize spatial coverage. The region 
 covered by all 25 VIMOS is outlined in red, 
 whereas the regions covered by literature studies are shown in green 
-\citep{Bergond07} and blue \citep{Schuberth}.}.
+\citep{Bergond07} and blue \citep{Schuberth}.}
 \label{fig:fov}
 \end{figure*}
 
@@ -223,7 +219,7 @@ whereas the regions covered by literature studies are shown in green
 
 The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) is a joint 
 project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) 
-and VEGAS (P.I. E. Iodice, \citealt{capaccioli+15}), aimed at studying the 
+and VEGAS (P.I. E. Iodice, \citealt{capaccioli15}), aimed at studying the 
 formation and assembly of the Fornax Cluster out to its virial radius with a 
 variety of observations. These include
 deep photometry, supplemented by cross-match with other wavelength observations 
@@ -231,13 +227,13 @@ such as  X-rays \citep[][e.g.,]{Paolillo02} and multi-object and integral-field
 spectroscopy.
 The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data 
 from the OmegaCam (Kuijken 2011) camera at the VLT Survey Telescope (VST, 
-\citealt{schipani+12}), covering an area of $\sim30$ deg$^2$ of the cluster out 
+\citealt{schipani12}), covering an area of $\sim30$ deg$^2$ of the cluster out 
 to the virial radius. The area includes the Fornax-A subgroup, hence providing 
 a full coverage of the cluster structure under assembly.  The depth of the 
-imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see \citealt{Iodice16,iodice17}
-), among the deepest acquired on the cluster so far \citep{venhola+17}. 
-VISTA/VIRCAM observations in $J$ and $K$ (with limiting magnitudes $K_s$ = 23.4 $AB$ mag, and 
-$J = 23.4$ $AB$ mag, respectively) are also available (see e.g. \citealt{munoz+15}), to 
+imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band \citep{Iodice16, Iodice17}, 
+among the deepest acquired on the cluster so far \citep{venhola17}. 
+VISTA/VIRCAM observations in $J$ and $K$ (with limiting magnitudes $K_s  = 23.4 $ mag $AB$ 
+mag, and $J = 23.4$ mag $AB$ mag, respectively) are also available (see e.g. \citealt{munoz15}), to 
 complement the optical data and optimise galaxy and globular cluster membership 
 and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, 
 and/or ultra compact dwarf galaxies, UCDs hereafter). 
@@ -247,26 +243,26 @@ colours of cluster galaxies out to 8-10 effective radii and beyond to
 characterise the faint galaxy haloes. These studies revealed the presence of 
 ultra-faint stellar structures in the core of Fornax: fingerprints of past and 
 ongoing interaction between galaxies falling into the deep potential well of 
-the cluster \citep{Iodice16,venhola+17}. The same conclusion is 
+the cluster \citep{Iodice16,venhola17}. The same conclusion is 
 backed up by the complex distribution of globular clusters in the Fornax 
-cluster \citep{DAbrusco16,cantiello+17}.
+cluster \citep{DAbrusco16,cantiello17}.
 
 \subsubsection{Next Generation Fornax Survey}
 \label{sec:NGFS}
-The Next Generation Fornax Survey (NGFS; \citealt{munoz+05}, Puzia et al. 2018, in prep.) 
+The Next Generation Fornax Survey (NGFS; \citealt{munoz15}, Puzia et al. 2018, in prep.) 
 is an optical and near-infrared imaging survey of the Fornax
 galaxy cluster virial sphere ($R_{\rm vir}\sim 1.4$ Mpc; \citealt{Drinkwater+01}). 
 NGFS uses the Dark Energy Camera (DECam; Flaugher et al. 2015) mounted on the 
 4-meter Blanco telescope at Cerro Tololo Interamerican Observatory (CTIO) in the 
 optical wavelengths and the European Southern Observatory (ESO) 3.7-meter VISTA 
-telescope with VIRCam \citep{sutherland+15} for near-infrared observations. 
+telescope with VIRCam \citep{sutherland15} for near-infrared observations. 
 The current NGFS survey footprint covers $\sim50$ deg$^2$ with 19 DECam tiles of 2.65 
-deg$^2$ each, and detects point-sources at $S/N\ =$ 5 down to u$'$ = 26.5, g$'$ = 26.1, 
-i$'$ = 25.3, J = 24.0 and K_s = 23.4 AB mag. Here we make use of preliminary NGFS 
+deg$^2$ each, and detects point-sources at $S/N\ =$ 5 down to $u'= 26.5$ , $g'= 26.1$ , 
+$i'= 25.3$ , $J = 24.0$ and $K_s = 23.4$ AB mag. Here we make use of preliminary NGFS 
 $K_s$-band point source catalogs.
 
 The panchromatic NGFS data were recently used to detect low surface-brightness 
-galaxies \citep{munoz+15}, measure the morphological, scaling, and clustering 
+galaxies \citep{munoz15}, measure the morphological, scaling, and clustering 
 properties of more than 600 dwarf galaxies (\citealt{Eigenthaler18}, îrdenes-Brice–o 
 et al. 2018a, submitted), study their nucleation and stellar population properties 
 (îrdenes-Brice–o et al. 2018b, submitted, Eigenthaler et al. 2018b, submitted), 
@@ -405,6 +401,7 @@ detector footprints in Figure \ref{fig:fov}). Overall, one VIMOS mask set
 covers a field of 4 $\times$ (7 $\times$ 8 arcmin$^2$). All masks were observed 
 for 1.5 hours in total, divided into three dithered exposures of 30 minutes. 
 The seeing ranged from 0.66 arcsec to 1.15 arcsec, with a median of 0.85 arcsec. 
+The median airmass was 1.061. 
 
 \subsection{Data reduction}
 
@@ -1068,7 +1065,7 @@ In conclusion of this section, we can summarise the main finding of this paper
 in Figure 9, by saying that the unprecedented extension of the GC kinematics, 
 combined with the literature data, has demonstrated the kinematical signature 
 of a population of intracluster GCs, made of both red GCs and blue GCs. 
-The two populations show v_$v_{\rm rms}$ profiles consistent with the transition of GC 
+The two populations show $v_{\rm rms}$ profiles consistent with the transition of GC 
 dynamics driven by the potential of the central giant elliptical in Fornax (NGC~1399) 
 in the innermost regions to GC dynamics governed by the cluster potential 
 beyond $\sim$10 arcmin ($\sim$50 kpc) galacto-centric distance.
