--- a/ref3.bib
+++ b/ref3.bib
@@ -245,13 +245,7 @@ archivePrefix = "arXiv",
 @INPROCEEDINGS{duc11,
    author = {{Duc}, P.-A. and {Cuillandre}, J.-C. and {Alatalo}, K. and {Blitz}, L. and 
   {Bois}, M. and {Bournaud}, F. and {Bureau}, M. and {Cappellari}, M. and 
-  {C{\^o}t{\'e}}, P. and {Davies}, R.~L. and {Davis}, T.~A. and 
-  {de Zeeuw}, P.~T. and {Emsellem}, E. and {Ferrarese}, L. and 
-  {Ferriere}, E. and {Gwyn}, S. and {Khochfar}, S. and {Krajnovic}, D. and 
-  {Kuntschner}, H. and {Lablanche}, P.-Y. and {MacArthur}, L. and 
-  {McDermid}, R.~M. and {Michel-Dansac}, L. and {Morganti}, R. and 
-  {Naab}, T. and {Oosterloo}, T. and {Sarzi}, M. and {Scott}, N. and 
-  {Serra}, P. and {Weijmans}, A. and {Young}, L.~M.},
+  {C{\^o}t{\'e}}, P. and {Davies}, R.~L. and {Davis}},
     title = "{Investigating the Merger Origin of Early-type Galaxies using Ultra-deep Optical Images}",
  keywords = {galaxies: formation, galaxies: evolution, galaxies: interactions, galaxies: elliptical and lenticular, cD},
 booktitle = {Tracing the Ancestry of Galaxies},
@@ -3303,25 +3297,6 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Duc11,
-   author = {{Duc}, P.-A. and {Cuillandre}, J.-C. and {Serra}, P. and {Michel-Dansac}, L. and 
-  {Ferriere}, E. and {Alatalo}, K. and {Blitz}, L. and {Bois}, M. and 
-  {Bournaud}, F. and {Bureau}, M. and {Cappellari}, M. and {Davies}},
-    title = "{The ATLAS$^{3D}$ project - IX. The merger origin of a fast- and a slow-rotating early-type galaxy revealed with deep optical imaging: first results}",
-  journal = {\mnras},
-archivePrefix = "arXiv",
-   eprint = {1105.5654},
- keywords = {galaxies: elliptical and lenticular, cD, galaxies: formation, galaxies: individual: NGC 5557, galaxies: individual: NGC 680, galaxies: interactions},
-     year = 2011,
-    month = oct,
-   volume = 417,
-    pages = {863-881},
-      doi = {10.1111/j.1365-2966.2011.19137.x},
-   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.417..863D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
 @ARTICLE{Munoz14,
    author = {{Mu{\~n}oz}, R.~P. and {Puzia}, T.~H. and {Lan{\c c}on}, A. and 
   {Peng}, E.~W. and {C{\^o}t{\'e}}, P. and {Ferrarese}},
@@ -3421,27 +3396,6 @@ archivePrefix = "arXiv",
     pages = {L31},
       doi = {10.3847/2041-8205/819/2/L31},
    adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...819L..31D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{Iodice16,
-   author = {{Iodice}, E. and {Capaccioli}, M. and {Grado}, A. and {Limatola}, L. and 
-  {Spavone}, M. and {Napolitano}, N.~R. and {Paolillo}, M. and 
-  {Peletier}, R.~F. and {Cantiello}, M. and {Lisker}, T. and {Wittmann}, C. and 
-  {Venhola}, A. and {Hilker}, M. and {D'Abrusco}, R. and {Pota}, V. and 
-  {Schipani}, P.},
-    title = "{The Fornax Deep Survey with VST. I. The Extended and Diffuse Stellar Halo of NGC 1399 out to 192 kpc}",
-  journal = {\apj},
-archivePrefix = "arXiv",
-   eprint = {1602.02149},
- keywords = {galaxies: clusters: individual: Fornax, galaxies: elliptical and lenticular, cD, galaxies: halos, galaxies: photometry},
-     year = 2016,
-    month = mar,
-   volume = 820,
-      eid = {42},
-    pages = {42},
-      doi = {10.3847/0004-637X/820/1/42},
-   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...820...42I},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -8529,10 +8483,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-
-@ARTICLE{Iodice+16,
+@ARTICLE{Iodice16,
    author = {{Iodice}, E. and {Capaccioli}, M. and {Grado}, A. and {Limatola}, L. and 
   {Spavone}, M. and {Napolitano}, N.~R. and {Paolillo}, M. and 
   {Peletier}, R.~F. and {Cantiello}, M. and {Lisker}, T. and {Wittmann}, C. and 
@@ -8553,29 +8504,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{dabrusco+16,
-   author = {{D'Abrusco}, R. and {Cantiello}, M. and {Paolillo}, M. and {Pota}, V. and 
-  {Napolitano}, N.~R. and {Limatola}, L. and {Spavone}, M. and 
-  {Grado}, A. and {Iodice}, E. and {Capaccioli}, M. and {Peletier}, R. and 
-  {Longo}, G. and {Hilker}, M. and {Mieske}, S. and {Grebel}, E.~K. and 
-  {Lisker}, T. and {Wittmann}, C. and {van de Ven}, G. and {Schipani}, P. and 
-  {Fabbiano}, G.},
-    title = "{The Extended Spatial Distribution of Globular Clusters in the Core of the Fornax Cluster}",
-  journal = {\apjl},
-archivePrefix = "arXiv",
-   eprint = {1602.06076},
- keywords = {galaxies: clusters: individual: Fornax, galaxies: evolution, galaxies: individual: NGC 1399},
-     year = 2016,
-    month = mar,
-   volume = 819,
-      eid = {L31},
-    pages = {L31},
-      doi = {10.3847/2041-8205/819/2/L31},
-   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...819L..31D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{capaccioli+15,
+@ARTICLE{capaccioli15,
    author = {{Capaccioli}, M. and {Spavone}, M. and {Grado}, A. and {Iodice}, E. and 
   {Limatola}, L. and {Napolitano}, N.~R. and {Cantiello}, M. and 
   {Paolillo}, M. and {Romanowsky}, A.~J. and {Forbes}, D.~A. and 
@@ -8595,7 +8524,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{schipani+12,
+@ARTICLE{schipani12,
    author = {{Schipani}, P. and {Capaccioli}, M. and {D'Orsi}, S. and {Marcozzi}, C. and 
   {Marty}, L. and {De Paris}, G. and {Fierro}, D. and {Arcidiacono}, C. and 
   {Farinato}, J. and {Magrin}, D. and {Ragazzoni}, R. and {Umbriaco}, G. and 
@@ -8611,35 +8540,11 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{munoz+15,
-   author = {{Mu{\~n}oz}, R.~P. and {Eigenthaler}, P. and {Puzia}, T.~H. and 
-  {Taylor}, M.~A. and {Ordenes-Brice{\~n}o}, Y. and {Alamo-Mart{\'{\i}}nez}, K. and 
-  {Ribbeck}, K.~X. and {{\'A}ngel}, S. and {Capaccioli}, M. and 
-  {C{\^o}t{\'e}}, P. and {Ferrarese}, L. and {Galaz}, G. and {Hempel}, M. and 
-  {Hilker}, M. and {Jord{\'a}n}, A. and {Lan{\c c}on}, A. and 
-  {Mieske}, S. and {Paolillo}, M. and {Richtler}, T. and {S{\'a}nchez-Janssen}, R. and 
-  {Zhang}, H.},
-    title = "{Unveiling a Rich System of Faint Dwarf Galaxies in the Next Generation Fornax Survey}",
-  journal = {\apjl},
-archivePrefix = "arXiv",
-   eprint = {1510.02475},
- keywords = {galaxies: clusters: individual: Fornax, galaxies: dwarf, galaxies: elliptical and lenticular, cD},
-     year = 2015,
-    month = nov,
-   volume = 813,
-      eid = {L15},
-    pages = {L15},
-      doi = {10.1088/2041-8205/813/1/L15},
-   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...813L..15M},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@ARTICLE{iodice+17,
-   author = {{Iodice}, E. and {Spavone}, M. and {Cantiello}, M. and {D{\rsquo}Abrusco}, R. and 
-  {Capaccioli}, M. and {Hilker}, M. and {Mieske}, S. and {Napolitano}, N.~R. and 
-  {Peletier}, R.~F. and {Limatola}, L. and {Grado}, A. and {Venhola}, A. and 
-  {Paolillo}, M. and {Van de Ven}, G. and {Schipani}, P.},
+@ARTICLE{Iodice17,
+   author = {{Iodice}, E. and {Spavone}, M. and {Cantiello}, M. and {D'Abrusco}, R. and 
+	{Capaccioli}, M. and {Hilker}, M. and {Mieske}, S. and {Napolitano}, N.~R. and 
+	{Peletier}, R.~F. and {Limatola}, L. and {Grado}, A. and {Venhola}, A. and 
+	{Paolillo}, M. and {Van de Ven}, G. and {Schipani}, P.},
     title = "{Intracluster Patches of Baryons in the Core of the Fornax Cluster}",
   journal = {\apj},
 archivePrefix = "arXiv",
@@ -8656,12 +8561,28 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{venhola+17,
+@ARTICLE{munoz15,
+   author = {{Mu{\~n}oz}, R.~P. and {Eigenthaler}, P. and {Puzia}, T.~H. and 
+  {Taylor}, M.~A. and {Ordenes-Brice{\~n}o}, Y. and {Alamo-Mart{\'{\i}}nez}},
+    title = "{Unveiling a Rich System of Faint Dwarf Galaxies in the Next Generation Fornax Survey}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1510.02475},
+ keywords = {galaxies: clusters: individual: Fornax, galaxies: dwarf, galaxies: elliptical and lenticular, cD},
+     year = 2015,
+    month = nov,
+   volume = 813,
+      eid = {L15},
+    pages = {L15},
+      doi = {10.1088/2041-8205/813/1/L15},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...813L..15M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{venhola17,
    author = {{Venhola}, A. and {Peletier}, R. and {Laurikainen}, E. and {Salo}, H. and 
   {Lisker}, T. and {Iodice}, E. and {Capaccioli}, M. and {Kleijn}, G.~V. and 
   {Valentijn}, E. and {Mieske}, S. and {Hilker}, M. and {Wittmann}, C. and 
-  {van de Ven}, G. and {Grado}, A. and {Spavone}, M. and {Cantiello}, M. and 
-  {Napolitano}, N. and {Paolillo}, M. and {Falc{\'o}n-Barroso}, J.
   },
     title = "{The Fornax Deep Survey with VST. III. Low surface brightness dwarfs and ultra diffuse galaxies in the center of the Fornax cluster}",
   journal = {\aap},
@@ -8679,12 +8600,10 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{cantiello+17,
+@ARTICLE{cantiello17,
    author = {{Cantiello}, M. and {D'Abrusco}, R. and {Spavone}, M. and {Paolillo}, M. and 
   {Capaccioli}, M. and {Limatola}, L. and {Grado}, A. and {Iodice}, E. and 
-  {Raimondo}, G. and {Napolitano}, N. and {Blakeslee}, J.~P. and 
-  {Brocato}, E. and {Forbes}, D.~A. and {Hilker}, M. and {Mieske}, S. and 
-  {Peletier}, R. and {van de Ven}, G. and {Schipani}, P.},
+  {Raimondo}, G. and {Napolitano}, N. and {Blakeslee} },
     title = "{VEGAS-SSS II: Comparing the globular cluster systems in NGC3115 and NGC1399 using VEGAS and FDS survey data}",
   journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
@@ -8696,13 +8615,10 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{mentz+16,
+@ARTICLE{mentz16,
    author = {{Mentz}, J.~J. and {La Barbera}, F. and {Peletier}, R.~F. and 
   {Falc{\'o}n-Barroso}, J. and {Lisker}, T. and {van de Ven}, G. and 
-  {Loubser}, S.~I. and {Hilker}, M. and {S{\'a}nchez-Janssen}, R. and 
-  {Napolitano}, N. and {Cantiello}, M. and {Capaccioli}, M. and 
-  {Norris}, M. and {Paolillo}, M. and {Smith}, R. and {Beasley}, M.~A. and 
-  {Lyubenova}, M. and {Munoz}, R. and {Puzia}, T.},
+  {Loubser}, S.~I. and {Hilker}, M. and {S{\'a}nchez-Janssen}},
     title = "{Abundance ratios and IMF slopes in the dwarf elliptical galaxy NGC 1396 with MUSE}",
   journal = {\mnras},
 archivePrefix = "arXiv",
@@ -8752,13 +8668,10 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{sutherland+15,
+@ARTICLE{sutherland15,
    author = {{Sutherland}, W. and {Emerson}, J. and {Dalton}, G. and {Atad-Ettedgui}, E. and 
   {Beard}, S. and {Bennett}, R. and {Bezawada}, N. and {Born}, A. and 
-  {Caldwell}, M. and {Clark}, P. and {Craig}, S. and {Henry}, D. and 
-  {Jeffers}, P. and {Little}, B. and {McPherson}, A. and {Murray}, J. and 
-  {Stewart}, M. and {Stobie}, B. and {Terrett}, D. and {Ward}, K. and 
-  {Whalley}, M. and {Woodhouse}, G.},
+  {Caldwell}, M. and {Clark}, P. and {Craig}, S. and {Henry}},
     title = "{The Visible and Infrared Survey Telescope for Astronomy (VISTA): Design, technical overview, and performance}",
   journal = {\aap},
 archivePrefix = "arXiv",
